update file structure

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 # BlueJ files
 *.ctxt
 
-# Mobile Tools for Java (J2ME)
+# Mobile main.java.game.tools for Java (J2ME)
 .mtj.tmp/
 
 # Package Files #
